# Sol-Onchain-Analyst

./: .clinerules  .env.example  .gitignore  .gitmodules  .repomix-output.txt  CONTRIBUTING.md  Cargo.toml  README.md  architecture_plan.md  codebase.md  digest.txt  playground-1.mongodb.js
.cursor/rules/: cainam-core.mdc  cursor-tools.mdc  memory-bank.mdc  rig-crates.mdc
.github/PULL_REQUEST_TEMPLATE/: new-model-provider.md  new-vector-store.md  other.md
.github/prompts/: memory-bank.md
.github/workflows/: cd.yaml  ci.yaml
agents/trader/: Cargo.toml  docker-compose.yml
agents/trader/examples/: autonomouse_trader.rs
agents/trader/src/: lib.rs  main.rs
agents/trader/src/agents/: mod.rs
agents/trader/src/database/: mod.rs  sync.rs
agents/trader/src/market_data/: birdeye.rs  mod.rs  storage.rs  vector_store.rs
agents/trader/src/prediction/: mod.rs
agents/trader/src/storage/: schema.rs
agents/trader/src/strategy/: execution.rs  technical.rs
cainam-birdeye/: Cargo.toml
cainam-birdeye/examples/: basic_usage.rs  websocket_streaming.rs
cainam-birdeye/src/: lib.rs
cainam-birdeye/src/actions/: wallet_search.rs
cainam-birdeye/src/providers/: mod.rs  rate_limiter.rs
cainam-birdeye/src/types/: api.rs  error.rs  mod.rs  shared.rs
cainam-birdeye/tests/: integration_test.rs
cainam-discord/: Cargo.toml
cainam-discord/documents/: Rig_examples.md
cainam-discord/src/: rig_agent.rs
cainam-plugins/cookie/src/: get_agent_by_ca.rs  get_agent_by_name.rs  lib.rs  search_tweets.rs
cainam-plugins/gibwork/src/: create_gibwork_task.rs  lib.rs
cainam-plugins/goplus/src/: lib.rs
cainam-plugins/helius/src/: create_webhook.rs  delete_webhook.rs  get_assets_by_owner.rs  get_webhook.rs  lib.rs  transaction_parsing.rs
cainam-plugins/jupiter/src/: fetch_price.rs  get_token_data_by_address.rs  lib.rs  stake_with_jup.rs  trade.rs
cainam-plugins/pumpfun/src/: launch_token_pumpfun.rs  lib.rs
cainam-plugins/pyth/src/: lib.rs  (+1 more)
cainam-plugins/solana/: Cargo.toml
cainam-trader/: Cargo.toml  Makefile
cainam-trader/examples/: simple_trader.rs  test_full_system.rs  test_vector_store.rs
cainam-trader/scripts/: run_migrations.rs
cainam-trader/src/database/: mod.rs  positions.rs  sync.rs
cainam-trader/src/prediction/: mod.rs
cainam-trader/src/strategy/: mod.rs  pipeline.rs  risk.rs
cainam-twitter/: Cargo.toml  README.md
cainam-twitter/examples/: get_home_timeline.rs  get_message.rs  send_dm.rs
docs/: about-cainam.md  birdeye_api_docs.md  pr_template.md
examples/: token_filter.rs  token_filter_cli.rs
examples/advanced_pid_controller_tuner_example/: Cargo.toml  README.md
examples/agents/: close_empty_token_accounts.rs  create_gibwork_task.rs  create_solana_tools.rs  deploy_token.rs  jupiter_fetch_price.rs  market_analysis.rs  mint_nft_to_collection.rs  pyth_fetch_price.rs  rugcheck.rs  running_locally.rs
examples/degenspartan/: styles.txt
examples/entity_extraction_example/: Cargo.toml
examples/pid_controller_tuner_example/: Cargo.toml
examples/rag_system/: README.md
examples/text_classification_example/: Cargo.toml
memory-bank/: activeContext.md  codeReview.md  databaseStructure.md  developmentWorkflow.md  mongoDatabase.md  operationalContext.md  productContext.md  projectBoundaries.md  projectbrief.md  promptPipeline.md  techContext.md
migrations/: 01_initial_schema.sql  01_mongodb_setup.rs  02_mongodb_schema.rs  02_trade_status.sql  03_mongodb_trade_status.rs  03_position_allocations.sql  04_mongodb_allocations.rs  04_vector_store.sql  05_init_vector_store.sql  05_mongodb_vector_store.rs
phases_output/: cainam-core_analysis.txt  complete_report.md  final_analysis.md  phase1_discovery.md  phase2_planning.md  phase3_analysis.md  phase4_synthesis.md  phase5_consolidation.md
plugins/birdeye/: Cargo.toml  README.md
plugins/discord/: Cargo.toml
plugins/discord/documents/: Rig_code_samples.md
plugins/discord/src/: main.rs  rig_agent.rs
plugins/solana/: Cargo.toml
plugins/twitter/: Cargo.toml
rig-core/: Cargo.toml  README.md
rig-core/examples/: agent_with_context.rs  calculator_chatbot.rs  chain.rs  debate.rs  extractor.rs  multi_agent.rs  multi_extract.rs  rag.rs  rag_dynamic_tools.rs  sentiment_classifier.rs  simple_model.rs
rig-core/src/: agent.rs  lib.rs
rig-core/src/pipeline/: mod.rs  op.rs
rig-core/src/providers/: azure.rs  galadriel.rs  openai.rs
rig-postgres/: Cargo.toml  README.md
scripts/: add-template.sh  capture_market_data.rs  capture_token_analytics.rs  capture_token_trending.rs  capture_trending_tokens.rs  init_mongodb.rs  init_vector_store.rs  run_agent.rs  run_migrations.rs  setup_mongodb.rs  test_vector_search.rs
src/: error.rs  lib.rs  logging.rs  main.rs  test_utils.rs
src/agent/: analyst.rs  mod.rs  portfolio_optimizer.rs  risk_manager.rs  trader.rs
src/birdeye/: api.rs  mod.rs
src/character/: mod.rs
src/characteristics/: adjectives.rs  bio.rs  lore.rs  post_examples.rs  previous_messages.rs  styles.rs  topics.rs
src/cli/: mod.rs
src/clients/: twitter.rs
src/config/: agent_config.rs  birdeye_config.rs  logging_config.rs  market_config.rs  mod.rs  mongodb.rs  pool.rs
src/core/: agent.rs
src/database/: mod.rs  sync.rs
src/logging/: market_metrics.rs  mod.rs  performance_metrics.rs
src/market_data/: birdeye.rs
src/models/: market_config.rs  market_data.rs  market_signal.rs  mod.rs  token_analytics.rs  token_info.rs  token_trending.rs  trending_token.rs
src/prompts/: analytics_system.txt  default.txt  exported_wallets_tracker (2).txt  kol_wallet_tracking.txt  system.txt  token_filter.txt  token_filter_enhanced.txt  token_filter_initial.txt  token_filter_market.txt  token_filter_metadata.txt  token_filter_reasoning.txt
src/providers/: birdeye.rs  mod.rs
src/services/: mod.rs  token_analytics.rs  token_analytics_llm.rs  token_data.rs  token_data_service.rs  token_filter.rs
src/trading/: mod.rs  trading_engine.rs
src/twitter/: mod.rs  tests.rs
src/utils/: mod.rs
src/vector_store/: mod.rs
tests/integration/: mod.rs  test_utils.rs  trade_flow_test.rs
(+90 files in other folders)
