[package]
name = "cainam-core"
version = "0.1.0"
edition = "2021"
authors = ["Matt Gunnin <matt@cainamventures.com>"]
repository = "https://github.com/cainamventures/cainam-core"
readme = "README.md"
keywords = ["ai", "solana", "rust", "cainam", "cainam-ventures"]
description = "Core functionality for the Cainam project"

[[bin]]
name = "cainam-core"
path = "src/main.rs"

[[bin]]
name = "setup_mongodb"
path = "scripts/setup_mongodb.rs"

[[bin]]
name = "init_vector_store"
path = "scripts/init_vector_store.rs"

[workspace]
resolver = "2"
members = [
    # plugins
    "plugins/birdeye",
    "plugins/discord",
    "plugins/twitter",
]
exclude = [
    "examples",
    "memory-bank",
    "phases_output",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = "z"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
opt-level = "z"

[dependencies]
rig-core = { version = "0.7.0", features = ["embeddings"] }
rig-mongodb = { version = "0.2.3", features = ["vector-store"] }
mongodb = { version = "3.2.1" }
anyhow = "1.0"
chrono = "0.4"
bigdecimal = { version = "0.2", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
bson = "2.0"
mockall = "0.11.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full", "macros"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
time = "0.3"
thiserror = "1.0"
async-trait = "0.1"

# Blockchain dependencies
solana-client = "1.17"
solana-sdk = "1.17"
solana-account-decoder = "1.17"
spl-token = "4.0"
spl-associated-token-account = "2.2"

# Additional utilities
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
dotenvy = "0.15.7"