[package]
name = "cainam-core"
version = "0.1.0"
edition = "2021"
authors = ["Matt Gunnin <matt@cainamventures.com>"]
repository = "https://github.com/cainamventures/cainam-core"
readme = "README.md"
keywords = ["ai", "solana", "rust", "cainam", "cainam-ventures"]
description = "Core functionality for the Cainam project"

[[bin]]
name = "cainam-core"
path = "src/main.rs"

[[bin]]
name = "setup_mongodb"
path = "scripts/setup_mongodb.rs"

[[bin]]
name = "init_vector_store"
path = "scripts/init_vector_store.rs"

[[bin]]
name = "run_agent"
path = "scripts/run_agent.rs"

[[bin]]
name = "capture_market_data"
path = "scripts/capture_market_data.rs"

[workspace]
resolver = "2"
members = [
    # plugins
    "plugins/birdeye",
    "plugins/discord",
    "plugins/twitter",
]
exclude = [
    "examples",
    "memory-bank",
    "phases_output",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = "z"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "z"
strip = true

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bigdecimal = { version = "0.2", features = ["serde"] }
bson = "2.0"
chrono = "0.4"
futures = "0.3"
mockall = "0.11.0"
mongodb = { version = "3.2.1", default-features = false, features = ["sync"] }
reqwest = { version = "0.11", features = ["json"] }
rig-core = "0.8.0"    
rig-mongodb = "0.2.4"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
thiserror = "1.0"
time = "0.3"
tokio = { version = "1", features = ["full", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }

# Blockchain dependencies
solana-account-decoder = "1.17"
solana-client = "1.17"
solana-sdk = "1.17"
spl-associated-token-account = "2.2"
spl-token = "4.0"

# Additional utilities
dotenvy = "0.15.7"
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }