[package]
name = "cainam-core"
version = "0.1.0"
edition = "2021"
authors = ["Matt Gunnin <matt@cainamventures.com>"]
repository = "https://github.com/cainamventures/cainam-core"
readme = "README.md"
keywords = ["ai", "solana", "rust", "cainam", "cainam-ventures"]
description = "Core functionality for the Cainam project"

[[bin]]
name = "cainam"
path = "src/bin/cainam.rs"

[[bin]]
name = "cainam-core"
path = "src/main.rs"

[[bin]]
name = "setup_mongodb"
path = "scripts/setup_mongodb.rs"

[[bin]]
name = "capture_token_trending"
path = "scripts/capture_token_trending.rs"

[[bin]]
name = "capture_token_analytics"
path = "scripts/capture_token_analytics.rs"

[workspace]
resolver = "2"
members = []
exclude = [
    "examples",
    "memory-bank",
    "phases_output",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = "z"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "z"
strip = true

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bigdecimal = { version = "0.2", features = ["serde"] }
bson = "2.0"
chrono = "0.4"
futures = "0.3"
mockall = "0.11.0"
mongodb = "3.2.1"
reqwest = { version = "0.11", features = ["json"] }
rig-core = { version = "0.9.0", features = ["all"] }
rig-mongodb = "0.2.5"
solagent-core = "0.1.6"
serde = { version = "1.0.217", features = ["derive"] }
serde_derive = "1.0.217"
thiserror = "2.0.11"
time = "0.3"
tokio = { version = "1", features = ["full", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }

# Blockchain dependencies
solana-account-decoder = "2.2.0"
solana-client = "2.2.0"
solana-sdk = "2.2.1"
solana-program = "2.2.1"
spl-associated-token-account = "6.0.0"
spl-token = "7.0"

# Additional utilities
dotenvy = "0.15.7"
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }

clap = { version = "4.4", features = ["derive"] }
console = "0.15"
indicatif = "0.17"
dialoguer = "0.11"
colored = "2.1"

[[example]]
name = "token_filter"
path = "examples/token_filter.rs"

[[example]]
name = "token_filter_cli"
path = "examples/token_filter_cli.rs"
