[package]
name = "cainam-birdeye"
version = "0.1.0"
edition = "2021"
description = "Birdeye client for DeFi and token analytics"
license = "MIT"

[dependencies]
# Core dependencies
tokio = { workspace = true, features = ["full", "macros"] }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres", "macros", "bigdecimal", "chrono"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
reqwest = { workspace = true, features = ["json"] }
chrono = { workspace = true, features = ["serde"] }
async-trait.workspace = true
thiserror.workspace = true

# AI/ML
openai.workspace = true

# Trading dependencies
# cainam-trader = { path = "../cainam-trader" }

# Other dependencies
base64.workspace = true
bs58.workspace = true
url.workspace = true
hex.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
dotenvy = "0.15.7"
mockall = "0.11"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util", "macros", "rt-multi-thread"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
pretty_assertions = "1.0"

[lib]
name = "cainam_birdeye"
path = "src/lib.rs"
