[package]
name = "cainam-discord"
version = "0.1.0"
edition = "2021"

[dependencies]
rig-core = { path = "../rig-core", features = ["derive"] }
tokio.workspace = true
serenity.workspace = true

# Environment variables
dotenvy = "0.15.7"
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
async-trait.workspace = true
