[package]
name = "cainam-trader"
version = "0.1.0"
edition = "2021"

[dependencies]
# Framework
rig-core = { path = "../rig-core", features = ["derive", "pdf", "all"] }
rig-postgres = { path = "../rig-postgres" }

# Core dependencies
tokio = { version = "1.43.0", features = ["full"] }
anyhow = "1.0.95"
thiserror = "1.0"
async-trait = "0.1.85"
futures = "0.3"

# Database
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "tls-native-tls", "chrono", "bigdecimal", "uuid", "json", "macros", "time", "migrate", "any", "derive"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4"] }
pgvector = { version = "0.4", features = ["sqlx"] }

# Serialization
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
bincode = "1.3"
schemars = "0.8.21"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json", "time"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde"] }

# Environment
dotenvy = "0.15.7"

# HTTP client
reqwest = { version = "0.12.12", features = ["json"] }

# Utilities
uuid = { version = "1.0", features = ["serde", "v4"] }
base64 = "0.21"
rand = "0.8"

# DEX integration
# Using Jupiter via HTTP API instead of direct SDK
serde_qs = "0.12"  # For query string serialization
url = "2.4"        # For URL manipulation

# Social media integration
twitter-v2 = "0.1"
oauth2 = "4.4"

# OpenAI
openai = { version = "1.0.0-alpha.18" }

# Authentication
oauth1 = "1.0"

# Solana ecosystem
solana-client = "2.1.12"
solana-sdk = "2.1.12"
solana-program = "2.1.12"
anchor-client = "0.29"
anchor-lang = "0.29"
anchor-spl = "0.29"
zeroize = "=1.7.0"

# Machine Learning
tch = "0.15"

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.0"
test-log = { version = "0.2", features = ["trace"] }
env_logger = "0.10"
tokio = { version = "1.43.0", features = ["full", "test-util"] }
mockall = "0.12.1"
