[package]
name = "cainam-trader"
version = "0.1.0"
edition = "2021"

[dependencies]
# Framework
rig-core = { path = "../rig-core", features = ["derive", "pdf", "all"] }
rig-postgres = { path = "../rig-postgres" }

# Core dependencies
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
futures.workspace = true

# Database
sqlx.workspace = true
tokio-postgres.workspace = true
pgvector.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
schemars.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Time handling
chrono.workspace = true
time.workspace = true

# Environment
dotenvy = "0.15.7"

# HTTP client
reqwest.workspace = true

# Utilities
uuid.workspace = true
base64.workspace = true
rand.workspace = true

# DEX integration
# Using Jupiter via HTTP API instead of direct SDK
serde_qs.workspace = true  # For query string serialization
url.workspace = true      # For URL manipulation

# Social media integration
twitter-v2.workspace = true
oauth2.workspace = true

# OpenAI
openai.workspace = true

# Authentication
oauth1.workspace = true

# Solana ecosystem
solana-client.workspace = true
solana-sdk.workspace = true
solana-program.workspace = true
anchor-client.workspace = true
anchor-lang.workspace = true
anchor-spl.workspace = true
zeroize.workspace = true

# Machine Learning
tch.workspace = true

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.0"
test-log = { version = "0.2", features = ["trace"] }
env_logger = "0.10"
tokio = { version = "1.43.0", features = ["full", "test-util"] }
mockall = "0.12.1"
