[package]
name = "cainam-twitter"
version = "0.1.2"
edition = "2021"
description = "A Twitter/X client library using cookies"
license = "MIT"
readme = "README.md"
keywords = ["twitter", "x.com", "api", "client"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
reqwest = { workspace = true, features = ["cookies", "multipart"] }
serde.workspace = true
serde_json.workspace = true
cookie.workspace = true
async-trait.workspace = true
thiserror.workspace = true
chrono.workspace = true
lazy_static.workspace = true
totp-rs.workspace = true
urlencoding.workspace = true
regex.workspace = true
url.workspace = true
tokio.workspace = true
tracing.workspace = true

# Environment variables
dotenvy = "0.15.7"
