[package]
name = "rig-core"
version = "0.7.0"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "An opinionated library for building LLM powered applications."
repository = "https://github.com/0xPlaygrounds/rig"

[lib]
name = "rig"
path = "src/lib.rs"
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { workspace = true, features = ["stream"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
futures.workspace = true
ordered-float.workspace = true
schemars.workspace = true
thiserror.workspace = true
rig-derive = { version = "0.1.0", path = "./rig-core-derive", optional = true }
glob.workspace = true
lopdf = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
worker = { workspace = true, optional = true }
bytes.workspace = true
async-stream.workspace = true

[dev-dependencies]
anyhow = "1.0.75"
assert_fs = "1.1.2"
tokio = { version = "1.34.0", features = ["full"] }
tracing-subscriber = "0.3.18"
tokio-test = "0.4.4"

[features]
all = ["derive", "pdf", "rayon"]
derive = ["dep:rig-derive"]
pdf = ["dep:lopdf"]
rayon = ["dep:rayon"]
worker = ["dep:worker"]

[[test]]
name = "embed_macro"
required-features = ["derive"]

[[example]]
name = "rag"
required-features = ["derive"]

[[example]]
name = "vector_search"
required-features = ["derive"]

[[example]]
name = "vector_search_cohere"
required-features = ["derive"]

[[example]]
name = "gemini_embeddings"
required-features = ["derive"]

[[example]]
name = "xai_embeddings"
required-features = ["derive"]
