[package]
name = "cainam-trader"
version = "0.1.0"
edition = "2021"

[dependencies]
# Framework
rig = { version = "0.8.0", features = ["openai", "mongodb", "solana"] }
rig-core = "0.8.0"
rig-mongodb = "0.2.4"
rig-solana-trader = "0.1.0"

# Core dependencies
tokio = { version = "1.38.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono"] }

# Machine Learning
tch = "0.14"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = "0.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono", "time"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Environment
dotenvy = "0.15.7"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
base64 = "0.21"
rand = "0.8"

# Solana
solana-sdk = { version = "1.14.18", features = ["full"] }
solana-client = "1.14.18"
solana-program = "1.14.18"
spl-token = "3.5.0"
anchor-client = "0.26.0"
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"

# CLI
rustyline = "12.0"

# Jupiter DEX
jup-ag = "0.8"

# Technical Analysis
ta = "0.5"

# Social media integration
twitter-v2 = "0.1"
oauth2 = "4.4"
oauth1 = "1.0"

# OpenAI
openai = { version = "1.0.0-alpha.18" }

[dev-dependencies]
tokio-test = "0.4"